<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/quests"
            android:title="@string/quests"
            android:icon="@drawable/icon_search"/>
        <item
            android:id="@+id/my_quests"
            android:title="@string/my_quests"
            android:icon="@drawable/icon_list_done"/>
        <item
            android:id="@+id/leader_boards"
            android:title="@string/leader_boards"
            android:icon="@drawable/icon_leader_board"/>
    </group>
    <group>
        <item
            android:id="@+id/settings"
            android:title="@string/settings"
            android:icon="@drawable/icon_settings" />
        <item
            android:id="@+id/about_app"
            android:title="@string/about_app"
            android:icon="@drawable/icon_info"/>
    </group>

</menu>
